--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>Email: <a href="mailto:sandeepkohli180@gmail.com">sandeepkohli180@gmail.com</a></p>
     <p>Phone: <a href="tel:+919582579119">9582579119</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/sandeep-kohli-b1064b32a" target="_blank">Sandeep Kohli</a></p>
-    <p>GitHub: Coming soon...</p>
+    <p>GitHub: <a href="https://skpahadi-devfolio.github.io" target="_blank">View Portfolio</a></p>
     <form>
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
@@ -52,7 +52,6 @@
       <button type="submit">Send</button>
     </form>
   </section>
-
   <footer>
     <p>© 2025 Sandeep Kohli. All rights reserved.</p>
   </footer>
