--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <p>LinkedIn: <a href="https://www.linkedin.com/in/sandeep-kohli-b1064b32a" target="_blank">Sandeep Kohli</a></p>
     <p>GitHub: <a href="https://skpahadi-devfolio.github.io" target="_blank">View Portfolio</a></p>
 
-    <!-- ✅ Working Contact Form (FormSubmit) -->
+    <!-- ✅ Fully Working Form using FormSubmit -->
     <form action="https://formsubmit.co/sandeepkohli180@gmail.com" method="POST">
-      <input type="hidden" name="_captcha" value="false">
-      <!-- Optional redirect after submission -->
+      <input type="hidden" name="_captcha" value="false" />
+      <!-- Optional redirect page after submit -->
       <!-- <input type="hidden" name="_next" value="https://skpahadi-devfolio.github.io/thankyou.html"> -->
 
       <input type="text" name="name" placeholder="Your Name" required />
@@ -79,7 +79,6 @@
     <p>© <span id="year">2025</span> Sandeep Kohli. All rights reserved.</p>
   </footer>
 
-  <!-- JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
