--- a/index.html
+++ b/index.html
@@ -4,79 +4,201 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sandeep Kohli - Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <h1>Sandeep Kohli</h1>
-    <p>Aspiring Web & App Developer</p>
+
+  <!-- 🔗 Navigation Bar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- 🎯 Hero Section -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Sandeep Kohli</h1>
+      <p id="typing-text"></p>
+    </div>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I am a passionate and enthusiastic BCA graduate, aiming to build a successful career in the IT industry as a Software Developer, Software Engineer, Web Developer, or App Developer. I have a strong interest in learning new technologies and continuously improving my skills. My goal is to start my career in a startup or tech company where I can work in both technical and non-technical roles, contribute meaningfully to the company’s growth, and grow into a strong and impactful position.
-    </p>
+  <!-- 👤 About -->
+  <section id="about" class="section reveal">
+    <div class="section-card">
+      <h2>About Me</h2>
+      <p>
+        I am a passionate and enthusiastic BCA graduate, aiming to build a successful career in the IT industry as a Software Developer, Software Engineer, Web Developer, or App Developer. I have a strong interest in learning new technologies and continuously improving my skills. My goal is to start my career in a startup or tech company where I can work in both technical and non-technical roles, contribute meaningfully to the company’s growth, and grow into a strong and impactful position.
+      </p>
+    </div>
   </section>
 
-  <section id="skills">
+  <!-- 🛠 Skills -->
+  <!-- 🛠 Skills with Logos -->
+<section id="skills" class="section reveal">
+  <div class="section-card">
     <h2>Skills</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Basic JavaScript</li>
-    </ul>
-  </section>
+    <div class="skill-cards">
 
-  <section id="projects">
+      <div class="skill-card">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+        <p>HTML</p>
+      </div>
+
+      <div class="skill-card">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+        <p>CSS</p>
+      </div>
+
+      <div class="skill-card">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+        <p>JavaScript</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+  <!-- 📁 Projects -->
+<section id="projects" class="section reveal">
+  <div class="section-card">
     <h2>My Projects</h2>
 
-    <div class="project">
-      <h3>Portfolio Website</h3>
-      <p>This very portfolio you're viewing! Built using HTML, CSS, and JavaScript to showcase my skills, education, and contact info.</p>
-      <a href="https://skpahadi-devfolio.github.io" target="_blank">View Portfolio</a>
-    </div>
+    <div class="project-grid no-image">
 
-    <div class="project">
-      <h3>Quiz App</h3>
-      <p>An interactive quiz application built with HTML, CSS, and JavaScript. Users can select answers, see scores, and retry the quiz.</p>
-      <a href="https://skpahadi-devfolio.github.io/quiz-app/" target="_blank">View Quiz App</a>
-    </div>
-  </section>
+      <div class="project-card no-image-card">
+        <h3>Portfolio Website</h3>
+        <p>A personal developer portfolio built using HTML, CSS, and JS.</p>
+        <a href="https://skpahadi-devfolio.github.io" target="_blank">View Project</a>
+      </div>
 
-  <section id="education">
+      <div class="project-card no-image-card">
+        <h3>Quiz App</h3>
+        <p>A simple interactive quiz application built with JavaScript.</p>
+        <a href="https://skpahadi-devfolio.github.io/quiz-app/" target="_blank">View Project</a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+  <!-- 🎓 Education -->
+<section id="education" class="section reveal">
+  <div class="section-card">
     <h2>Education</h2>
-    <p><strong>Modern College of Professional Studies</strong>, Mohan Nagar, Ghaziabad</p>
-    <p>Bachelor of Computer Applications (BCA), 2022–2025</p>
+
+    <!-- 🎓 Graduation -->
+    <div class="edu-card">
+      <p><strong>Bachelor of Computer Applications (BCA)</strong></p>
+      <p>Modern College of Professional Studies, Mohan Nagar, Ghaziabad</p>
+      <p>2022 – 2025</p>
+    </div>
+
+    <!-- 🏫 Class 12 -->
+    <div class="edu-card">
+      <p><strong>Senior Secondary (Class 12th)</strong></p>
+      <p>Sahil Public School, Noida, Khora Colony, Shital Vihar</p>
+      <p>Passed in 2022</p>
+    </div>
+
+    <!-- 🏫 Class 10 -->
+    <div class="edu-card">
+      <p><strong>High School (Class 10th)</strong></p>
+      <p>Sahil Public School, Noida, Khora Colony, Shital Vihar</p>
+      <p>Passed in 2020</p>
+    </div>
+
+  </div>
+</section>
+
+
+  <!-- 💼 Experience -->
+  <section id="experience" class="section reveal">
+    <div class="section-card">
+      <h2>Experience</h2>
+      <h3>Aditron India Pvt. Ltd. – A-23, Sector 57, Noida</h3>
+      <p><strong>Role:</strong> Back Office Executive (Part-Time, Remote)</p>
+      <p><strong>Duration:</strong> 2023 – Present</p>
+      <p>
+        I work remotely on a part-time basis with Aditron India Pvt. Ltd. My responsibilities include:
+      </p>
+      <ul>
+        <li>Creating Tax Invoices for products like Rotary Joints of various sizes</li>
+        <li>Preparing Delivery Challans and Letterheads as per requirement</li>
+        <li>Handling purchase orders received from client companies (approx. 4–5 per month)</li>
+        <li>Coordinating necessary documentation from Aditron’s side for clients</li>
+      </ul>
+      <p>
+        Although the work is not daily, I assist as per demand and receive ₹50 per invoice, with an annual earning of approximately ₹5,000–₹6,000.
+      </p>
+    </div>
   </section>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <p>Currently seeking internship and entry-level job opportunities where I can learn, grow, and contribute to real-world projects while building a strong foundation in the IT field.</p>
+  <!-- 🏅 Certificates -->
+<section id="certificates" class="section reveal">
+  <div class="section-card">
+    <h2>Certificates</h2>
+
+    <div class="edu-card">
+      <p><strong>Diploma in Computer Applications (DCA)</strong></p>
+      <p>6-Month Certification Course</p>
+      <p>Completed Successfully — Certificate Available</p>
+    </div>
+
+  </div>
+</section>
+
+
+  <!-- 📬 Contact -->
+  <section id="contact" class="section reveal">
+    <div class="section-card">
+      <h2>Contact Me</h2>
+      <p><i class="fas fa-envelope"></i> Email: <a href="mailto:sandeepkohli180@gmail.com">sandeepkohli180@gmail.com</a></p>
+      <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/sandeep-kohli-b1064b32a" target="_blank">Sandeep Kohli</a></p>
+      <p><i class="fab fa-github"></i> GitHub: <a href="https://skpahadi-devfolio.github.io" target="_blank">View Portfolio</a></p>
+
+      <form action="https://formsubmit.co/sandeepkohli180@gmail.com" method="POST">
+        <input type="hidden" name="_captcha" value="false" />
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+
+      <a href="resume.pdf" class="resume-btn" download><i class="fas fa-download"></i> Download Resume</a>
+    </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:sandeepkohli180@gmail.com">sandeepkohli180@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/sandeep-kohli-b1064b32a" target="_blank">Sandeep Kohli</a></p>
-    <p>GitHub: <a href="https://skpahadi-devfolio.github.io" target="_blank">View Portfolio</a></p>
+  <!-- 🌌 Modern Footer -->
+<footer class="footer">
+  <div class="footer-container">
+    <h2>Let's Connect</h2>
+    <p>Feel free to reach out for collaborations or just a friendly hello! 👋</p>
 
-    <!-- ✅ Fully Working Form using FormSubmit -->
-    <form action="https://formsubmit.co/sandeepkohli180@gmail.com" method="POST">
-      <input type="hidden" name="_captcha" value="false" />
-      <!-- Optional redirect page after submit -->
-      <!-- <input type="hidden" name="_next" value="https://skpahadi-devfolio.github.io/thankyou.html"> -->
+    <div class="social-icons">
+      <a href="mailto:sandeepkohli180@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/sandeep-kohli-b1064b32a" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://skpahadi-devfolio.github.io" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+    </div>
 
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
+    <hr />
+    <p class="copyright">
+      © <span id="year">2025</span> Sandeep Kohli | Made with ❤️ for the Web
+    </p>
+  </div>
+</footer>
 
-  <footer>
-    <p>© <span id="year">2025</span> Sandeep Kohli. All rights reserved.</p>
-  </footer>
+
+  <!-- 🔼 Scroll to Top -->
+  <button id="scrollToTop" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
   <script src="script.js"></script>
 </body>
