--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <button type="submit">Send Message</button>
       </form>
 
-      <a href="resume.pdf" class="resume-btn" download><i class="fas fa-download"></i> Download Resume</a>
+      <a href="SANDEEP KOHLI CV.pdf" class="resume-btn" download><i class="fas fa-download"></i> Download Resume</a>
     </div>
   </section>
 
