--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="section-card">
       <h2>About Me</h2>
       <p>
-        I am a passionate and enthusiastic BCA graduate, aiming to build a successful career in the IT industry as a Software Developer, Software Engineer, Web Developer, or App Developer. I have a strong interest in learning new technologies and continuously improving my skills. My goal is to start my career in a startup or tech company where I can work in both technical and non-technical roles, contribute meaningfully to the company’s growth, and grow into a strong and impactful position.
+        I am a passionate and enthusiastic BCA graduate focused on building a career in web development. I have hands-on experience with HTML,CSS, and Javascript, and I am actively creating responsive and user-friendly web interfaces.My goal is to start my career as a Web Developer in a startup or tech company where I can contribute to real-world projects,enhance my skills, and gradually grow into advanced roles like Full Stack Developer, Software Engineer, or App Developer in future".
       </p>
     </div>
   </section>
