--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="section-card">
       <h2>About Me</h2>
       <p>
-        I am a passionate and enthusiastic BCA graduate focused on building a career in web development. I have hands-on experience with HTML,CSS, and Javascript, and I am actively creating responsive and user-friendly web interfaces.My goal is to start my career as a Web Developer in a startup or tech company where I can contribute to real-world projects,enhance my skills, and gradually grow into advanced roles like Full Stack Developer, Software Engineer, or App Developer in future".
+        "I am a passionate and enthusiastic BCA graduate focused on building a career in web development. I have hands-on experience with HTML, CSS, and Javascript, and I am actively creating responsive and user-friendly web interfaces.My goal is to start my career as a Web Developer in a startup or tech company where I can contribute to real-world projects, enhance my skills, and gradually grow into advanced roles like Full Stack Developer, Software Engineer, or App Developer in future."
       </p>
     </div>
   </section>
@@ -82,6 +82,12 @@
           <h3>Quiz App</h3>
           <p>A simple interactive quiz application built with JavaScript.</p>
           <a href="https://skpahadi-devfolio.github.io/quiz-app/" target="_blank">View Project</a>
+        </div>
+
+        <div class="project-card no-image-card">
+          <h3>Animated-Login Page</h3>
+          <p>Animated-Login Page with help of HTML & CSS.</p>
+          <a href="https://skpahadi-devfolio.github.io/animated-login/" target="_blank">View Project</a>
         </div>
       </div>
     </div>
