--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <h2>Contact Me</h2>
       <p><i class="fas fa-envelope"></i> Email: <a href="mailto:sandeepkohli180@gmail.com">sandeepkohli180@gmail.com</a></p>
       <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/sandeep-kohli-b1064b32a" target="_blank">Sandeep Kohli</a></p>
-      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/skpahadi-devfolio" target="_blank">Visit GitHub</a></p>
+      <p><i class="fab fa-github"></i> GitHub: <a href="https://github.com/skpahadi-devfolio" target="_blank">GitHub</a></p>
 
 
       <form action="https://formsubmit.co/sandeepkohli180@gmail.com" method="POST">
