--- a/index.html
+++ b/index.html
@@ -41,30 +41,114 @@
     </div>
   </section>
 
-  <!-- 🛠 Skills -->
   <section id="skills" class="section reveal">
-    <div class="section-card">
-      <h2>Skills</h2>
-      <div class="skill-cards">
+  <div class="section-card">
+    <h2>Skills</h2>
 
+    <!-- 🎨 Frontend Skills Card -->
+    <div class="section-card" style="margin-top: 30px;">
+      <h3 style="text-align: center; margin-bottom: 20px;">Frontend Development</h3>
+      <div class="skill-cards">
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
           <p>HTML</p>
         </div>
-
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
           <p>CSS</p>
         </div>
-
         <div class="skill-card">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
           <p>JavaScript</p>
         </div>
-
       </div>
     </div>
-  </section>
+
+    <!-- 🛠 Backend Skills Card -->
+    <div class="section-card" style="margin-top: 30px;">
+      <h3 style="text-align: center; margin-bottom: 20px;">Backend Development</h3>
+      <div class="skill-cards">
+        <div class="skill-card">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+          <p>PHP</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 🗄 Database Skills Card -->
+    <div class="section-card" style="margin-top: 30px;">
+      <h3 style="text-align: center; margin-bottom: 20px;">Database</h3>
+      <div class="skill-cards">
+        <div class="skill-card">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
+          <p>MySQL</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- ✨ Prompt Engineering --> 
+<section id="prompt-engineering" class="section reveal">
+  <div class="section-card">
+    <h2>Prompt Engineering</h2>
+
+    <div class="skill-cards">
+      <div class="skill-card">
+        <img src="https://cdn-icons-png.flaticon.com/512/11338/11338924.png" alt="Prompt Engineering Icon" />
+        <p>Prompt Engineering</p>
+      </div>
+    </div>
+
+    <p style="text-align: center; font-size: 1.2rem; font-weight: 500; margin-top: 20px;">
+      As an AI-aware developer, I specialize in writing precise and structured prompts to get high-quality output from tools like ChatGPT and Gemini. With deep understanding of AI behavior, I generate code, content, debug logic, and even automate workflows — all by crafting the right instructions.
+    </p>
+  </div>
+</section>
+
+
+<!-- 🤖 AI Toolbox -->
+<section id="ai-toolbox" class="section reveal">
+  <div class="section-card">
+    <h2>AI Toolbox</h2>
+    <p style="text-align: center; font-size: 1.05rem; margin-bottom: 20px;">
+        I consistently leverage cutting-edge AI tools to enhance my workflow, speed up development, and explore creative possibilities. Whether it's writing better code, generating content ideas, debugging efficiently, or learning new technologies, these AI platforms have become an essential part of my daily toolkit. <br><br>
+  From brainstorming web features with ChatGPT to using Gemini for quick research or GitHub Copilot for intelligent code suggestions, I rely on these assistants to stay productive and innovative. DeepSeek, too, helps dive deep into problem-solving and code explanations. <br><br>
+  In this section, you'll find the AI tools I regularly use — each with its own strength — enabling me to go from idea to execution faster than ever before.
+    </p>
+
+    <div class="skill-cards">
+
+      <!-- ChatGPT -->
+      <div class="skill-card">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg" alt="ChatGPT">
+        <p>ChatGPT</p>
+      </div>
+
+      <!-- Gemini -->
+      <div class="skill-card">
+        <img src="https://cdn-icons-png.flaticon.com/512/10686/10686199.png" alt="Gemini (Bard)">
+        <p>Gemini</p>
+      </div>
+
+      <!-- GitHub Copilot -->
+      <div class="skill-card">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub Copilot">
+        <p>GitHub Copilot</p>
+      </div>
+
+      <!-- DeepSeek -->
+      <div class="skill-card">
+        <img src="https://avatars.githubusercontent.com/u/153134331?s=200&v=4" alt="DeepSeek AI" />
+        <p>DeepSeek</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
 
   <!-- 📁 Projects -->
   <section id="projects" class="section reveal">
