--- a/index.html
+++ b/index.html
@@ -44,48 +44,38 @@
   <section id="skills" class="section reveal">
   <div class="section-card">
     <h2>Skills</h2>
+    <div class="skill-cards">
 
-    <!-- 🎨 Frontend Skills Card -->
-    <div class="section-card" style="margin-top: 30px;">
-      <h3 style="text-align: center; margin-bottom: 20px;">Frontend Development</h3>
-      <div class="skill-cards">
-        <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
-          <p>HTML</p>
-        </div>
-        <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
-          <p>CSS</p>
-        </div>
-        <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
-          <p>JavaScript</p>
-        </div>
+      <!-- 🎨 Frontend -->
+      <div class="skill-card">
+        <img src="https://img.icons8.com/fluency/96/000000/source-code.png" alt="Frontend Icon" />
+        <p>Frontend</p>
+        <ul style="list-style-type: disc; padding-left: 20px; text-align: left; font-size: 0.85rem; color: #ccc;">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+        </ul>
       </div>
-    </div>
 
-    <!-- 🛠 Backend Skills Card -->
-    <div class="section-card" style="margin-top: 30px;">
-      <h3 style="text-align: center; margin-bottom: 20px;">Backend Development</h3>
-      <div class="skill-cards">
-        <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
-          <p>PHP</p>
-        </div>
+      <!-- 🖥 Backend -->
+      <div class="skill-card">
+        <img src="https://img.icons8.com/fluency/96/000000/server.png" alt="Backend Icon" />
+        <p>Backend</p>
+        <ul style="list-style-type: disc; padding-left: 20px; text-align: left; font-size: 0.85rem; color: #ccc;">
+          <li>PHP</li>
+        </ul>
       </div>
-    </div>
 
-    <!-- 🗄 Database Skills Card -->
-    <div class="section-card" style="margin-top: 30px;">
-      <h3 style="text-align: center; margin-bottom: 20px;">Database</h3>
-      <div class="skill-cards">
-        <div class="skill-card">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
-          <p>MySQL</p>
-        </div>
+      <!-- 🗄 Database -->
+      <div class="skill-card">
+        <img src="https://img.icons8.com/fluency/96/000000/database.png" alt="Database Icon" />
+        <p>Database</p>
+        <ul style="list-style-type: disc; padding-left: 20px; text-align: left; font-size: 0.85rem; color: #ccc;">
+          <li>MySQL</li>
+        </ul>
       </div>
-    </div>
 
+    </div>
   </div>
 </section>
 
@@ -113,37 +103,21 @@
   <div class="section-card">
     <h2>AI Toolbox</h2>
     <p style="text-align: center; font-size: 1.05rem; margin-bottom: 20px;">
-        I consistently leverage cutting-edge AI tools to enhance my workflow, speed up development, and explore creative possibilities. Whether it's writing better code, generating content ideas, debugging efficiently, or learning new technologies, these AI platforms have become an essential part of my daily toolkit. <br><br>
-  From brainstorming web features with ChatGPT to using Gemini for quick research or GitHub Copilot for intelligent code suggestions, I rely on these assistants to stay productive and innovative. DeepSeek, too, helps dive deep into problem-solving and code explanations. <br><br>
-  In this section, you'll find the AI tools I regularly use — each with its own strength — enabling me to go from idea to execution faster than ever before.
+      I consistently leverage cutting-edge AI tools to enhance my workflow, speed up development, and explore creative possibilities. Whether it's writing better code, generating content ideas, debugging efficiently, or learning new technologies, these AI platforms have become an essential part of my daily toolkit.
     </p>
 
     <div class="skill-cards">
-
-      <!-- ChatGPT -->
       <div class="skill-card">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/ChatGPT_logo.svg" alt="ChatGPT">
-        <p>ChatGPT</p>
+        <!-- Just one AI image -->
+        <img src="https://cdn-icons-png.flaticon.com/512/4712/4712109.png" alt="AI Icon" />
+        <p>AI Tools</p>
+        <ul style="list-style-type: disc; padding-left: 20px; text-align: left; font-size: 0.9rem; color: #ccc;">
+          <li>ChatGPT</li>
+          <li>Gemini</li>
+          <li>GitHub Copilot</li>
+          <li>DeepSeek</li>
+        </ul>
       </div>
-
-      <!-- Gemini -->
-      <div class="skill-card">
-        <img src="https://cdn-icons-png.flaticon.com/512/10686/10686199.png" alt="Gemini (Bard)">
-        <p>Gemini</p>
-      </div>
-
-      <!-- GitHub Copilot -->
-      <div class="skill-card">
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub Copilot">
-        <p>GitHub Copilot</p>
-      </div>
-
-      <!-- DeepSeek -->
-      <div class="skill-card">
-        <img src="https://avatars.githubusercontent.com/u/153134331?s=200&v=4" alt="DeepSeek AI" />
-        <p>DeepSeek</p>
-      </div>
-
     </div>
   </div>
 </section>
