--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
           <p>Animated-Login Page with help of HTML & CSS.</p>
           <a href="https://skpahadi-devfolio.github.io/animated-login/" target="_blank">View Project</a>
         </div>
+
+        <div class="project-card no-image-card">
+          <h3>KJ&SK Pahadi Rasoi</h3>
+          <p>Pahadi Resturant or Cloud Kitchen Store</p>
+          <a href=" https://skpahadi-devfolio.github.io/KJ-SK-Pahadi-Rasoi/" target="_blank">View Project</a>
+        </div>
       </div>
     </div>
   </section>
