--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
         <div class="project-card no-image-card">
           <h3>Quiz App</h3>
           <p>A simple interactive quiz application built with JavaScript.</p>
-          <a href="https://skpahadi-devfolio.github.io/quiz-app/" target="_blank">View Project</a>
+          <a href="https://skpahadi-devfolio.github.io/Quiz-App/" target="_blank">View Project</a>
         </div>
 
         <div class="project-card no-image-card">
           <h3>Animated-Login Page</h3>
           <p>Animated-Login Page with help of HTML & CSS.</p>
-          <a href="https://skpahadi-devfolio.github.io/animated-login/" target="_blank">View Project</a>
+          <a href="https://skpahadi-devfolio.github.io/Animated-Login/" target="_blank">View Project</a>
         </div>
 
         <div class="project-card no-image-card">
