--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
           <p>Pahadi Resturant or Cloud Kitchen Store</p>
           <a href=" https://skpahadi-devfolio.github.io/KJ-SK-Pahadi-Rasoi/" target="_blank">View Project</a>
         </div>
+
+        <div class="project-card no-image-card">
+          <h3>MyFirst-LoginPage</h3>
+          <p>First self-made login UI using HTML & CSS, showcasing form layout, styling, and alignment.</p>
+          <a href="https://skpahadi-devfolio.github.io/MyFirst-LoginPage/" target="_blank">View Project</a>
+        </div>
       </div>
     </div>
   </section>
@@ -196,7 +202,7 @@
         <li>Handling purchase orders received from client companies (approx. 4–5 per month)</li>
         <li>Coordinating necessary documentation from Aditron’s side for clients</li>
       </ul>
-      <p>Although the work is not daily, I assist as per demand and receive ₹50 per invoice, with an annual earning of approximately ₹5,000–₹6,000.</p>
+      <p>Although the work is not daily, I assist as per demand and receive ₹200 per invoice, with an annual earning of approximately ₹20,000–₹25,000.</p>
     </div>
   </section>
 
