--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
           <p>First self-made login UI using HTML & CSS, showcasing form layout, styling, and alignment.</p>
           <a href="https://skpahadi-devfolio.github.io/MyFirst-LoginPage/" target="_blank">View Project</a>
         </div>
+
+        <div class="project-card no-image-card">
+          <h3>Number-Guessing-Game</h3>
+          <p>Number Guessing Game – Fun, Responsive & Animated Game</p>
+          <a href="https://skpahadi-devfolio.github.io/Number-Guessing-Game/" target="_blank">View Project</a>
+        </div>
       </div>
     </div>
   </section>
